# Dev

./: .env  CNAME  README.md  build.bat  build.sh  db.sqlite3  mime-types.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build.yml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: post_detail.html  posts.html
django_portfolio/: settings.py  urls.py
portfolio/: models.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/static/: main.css
portfolio/templates/: home.html  index.html  layout.html
portfolio/templates/partials/: navbar.html
