
[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "proyecto de portafolio"
authors = ["Richard <tayrona7@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2.4"
requests = "^2.26.0"
environ = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
