
[tool.poetry]
name = "django_portfolio"
version = "0.1.0"
description = "proyecto de portafolio"
authors = ["Richard <tayrona7@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.4"
requests = "^2.26.0"
environ = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
brotlipy = "^0.7.0"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
